# data-extracting

./: .deepeval  .deepeval_telemetry.txt  .gitignore  .pre-commit-config.yaml  DockerFile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/agents/: assessment_agent.py  curriculum_agent.py  graph.py  knowledge_retrieval_agent.py  recommendation_agent.py  state.py
app/core/: texts.yaml
app/handlers/: admin.py  user.py
app/keyboards/: admin_kb.py
app/models/: models.py
app/services/: db_service.py  document_service.py  rag_service.py
app/tools/: lightrag_retriever_tool.py
app/utils/: config_loader.py  prompt.py
app/utils/conf/: config.yaml
app/utils/conf/server/: server.yaml
conf/server/: server.yaml
data/: 112 вопросов 4 учебника.csv  129 вопросов 4 учебника.csv  160 вопросов 4 учебника.csv  160 медицинских вопросов 4 учебника confident.csv  160 медицинских вопросов полные учебники.csv  30 медицинских вопросов короткие учебники.csv
data/Retrievers/Наивный ретривер 30 вопросов/: 20250508_154155.csv
data/output_markdown/: Anatomia_cheloveka_1_tom_2-161-164.md  Anatomia_cheloveka_1_tom_2-52-57.md  Anatomia_cheloveka_1_tom_2.md  Kapandzhi_-_Pozvonochnik.md  Kozhnye_i_venericheskie_bolezni_pod_red_O_Yu_Olisovoi_774.md  Molekulyarnaya_biologia_kletki_Tom_1.md
documentation/: chonkie.txt
notebooks/: LLM.ipynb  RAG_tests.ipynb  Rag-types.ipynb  chunckers.ipynb  dataset_short.ipynb  datasets copy.ipynb  datasets.ipynb
notebooks/Rags/: NaiveRag.ipynb
scripts/: llama-server.sh
