[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Farid <mustafin-farid@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
loguru = "0.7.3"
hydra-core = "^1.3.2"
chonkie = {extras = ["all"], version = "^1.0.7"}
aiogram = "3.20.0.post0"
sqlalchemy = "2.0.40"
asyncpg = "0.30.0"
deepeval = "^2.7.9"
chromadb = "1.0.7"
pypdf = "5.4.0"
instructor = "1.7.9"
lm-format-enforcer = "^0.10.11"
pandas = "^2.2.3"
langchain-qdrant = "^0.2.0"
langchain-docling = "^0.2.0"
ipywidgets = "^8.1.7"
langchain-text-splitters = "^0.3.8"
unstructured = {extras = ["all-docs"], version = "^0.17.2"}
langchain-unstructured = "^0.1.6"
langchain-pymupdf4llm = "^0.4.0"
rapidocr-onnxruntime = "^1.4.4"
langchain = "^0.3.25"
langchain-community = "^0.3.24"
langchain-openai = "^0.3.16"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
